[ux,dataset/read][m]: Changes to the way the README description is displayed. Solved glitches with overlapping HTML anchors.

--- a/ckan/public/css/style.css
+++ b/ckan/public/css/style.css
@@ -1012,35 +1012,26 @@ body.package.read .related-datasets li {
     margin-top: 2em; 
     margin-bottom: 2em; 
 }
-#dataset-resources h3 {
+body.package.read h3 {
   margin-bottom: 8px;
 }
 .dataset-resource { 
   border-left: 2px solid #eee;
   margin: 0;
-  position: relative;
+  padding: 8px;
+  margin-bottom: 16px;
 }
-.dataset-resource .resource-view-link {
-  display: block;
-  padding: 10px 8px;
-  padding-bottom: 25px;
-}
-.dataset-resource .resource-view-link .plain-text {
-  color: #000;
-}
-
 .dataset-resource:hover {
   border-left: 2px solid #aaa;
   background: #f7f7f7;
 }
-.dataset-resource-divider {
-  border-bottom: 1px solid #eee;
-  margin: 8px 0;
+
+.dataset-resource .main-link {
+  font-size: 125%;
 }
-
-
-body.package.read .dataset-resource .view-more-link {
+.dataset-resource .view-more-link {
   float: right;
+  color: #000;
   text-align: middle;
   margin-top: 4px;
   padding: 3px 22px 3px 10px;
@@ -1048,24 +1039,20 @@ body.package.read .dataset-resource .view-more-link {
   opacity:0.4;
   filter:alpha(opacity=40); /* For IE8 and earlier */
 }
-body.package.read .dataset-resource:hover .view-more-link {
+.dataset-resource .view-more-link:hover {
   opacity:1.0;
   filter:alpha(opacity=100); /* For IE8 and earlier */
+  text-decoration: underline;
 }
 
-body.package.read .resource-url { 
-  display: block;
-  position: absolute;
-  left: 10px;
-  bottom: 5px;
-}
-body.package.read .resource-url a { 
+.dataset-resource .resource-url a { 
     color: #888;
 }
-body.package.read .resource-url a:hover { 
+.dataset-resource .resource-url a:hover { 
     color: #333;
     text-decoration: underline;
 }
+
 body.package.read .resource-information {
     padding-left: 0;
     color: #808080;
@@ -1088,20 +1075,38 @@ body.package.read .resource-format {
   font-weight: bold;
 }
 body.package.read #sidebar li.widget-container {
-    border: 0
+  border: 0
 }
-body.package.read .notes a {
-    cursor: pointer;
+body.package.read .notes {
+  padding: 8px; 
+  border-left: 2px solid #eee;
+  background: url('/images/ldquo.png') no-repeat top left #f7f7f7;
 }
+body.package.read .notes #dataset-notes-toggle a {
+  cursor: pointer;
+}
+body.package.read .notes #dataset-notes-toggle a.more:after {
+  content: '  »';
+  font-size: 150%;
+  position: relative;
+  bottom: -1px;
+}
+body.package.read .notes #dataset-notes-toggle a.less:before {
+  content: '« ';
+  font-size: 150%;
+  position: relative;
+  bottom: -1px;
+}
+
 body.package.read #notes-extract p {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 body.package.read #notes-remainder {
-    margin-top: 1em;
+  margin-top: 1em;
 }
 body.package.read #dataset-information .dataset-label {
-    font-weight: bold;
-    min-width: 10em;
+  font-weight: bold;
+  min-width: 10em;
 }
 
 
